controller actions and user service

--- a/game_project/config/packages/security.yaml
+++ b/game_project/config/packages/security.yaml
@@ -16,12 +16,13 @@ security:
             security: false
             anonymous: lazy
         main:
-            anonymous: lazy
+            anonymous: true
             provider: app_user_provider
-            json_login:
-                check_path: /login
-                username_path: username
-                password_path: password
+            logout:
+                path: /logout
+            guard:
+                authenticators:
+                    - App\Security\UserAuthAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -32,6 +33,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/remove_game, roles: ROLE_ADMIN }
-        - { path: ^/api/update_game, roles: ROLE_ADMIN }
+
         # - { path: ^/profile, roles: ROLE_USER }
