--- a/.docker/nginx/nginx.conf
+++ b/.docker/nginx/nginx.conf
@@ -6,7 +6,6 @@ server {
     if (!-e $request_filename) {
         rewrite ^.*$ /index.php last;
     }
-
     location ~ \.php$ {
             fastcgi_pass php:9000;
             fastcgi_index index.php;
@@ -15,4 +14,6 @@ server {
             fastcgi_buffer_size 32k;
             include fastcgi_params;
         }
+    add_header 'Access-Control-Allow-Credentials' 'true';
+
 }
