--- a/game_project/composer.json
+++ b/game_project/composer.json
@@ -14,6 +14,7 @@
         "symfony/console": "4.4.*",
         "symfony/dependency-injection": "4.4.*",
         "symfony/dotenv": "4.4.*",
+        "symfony/event-dispatcher": "4.4.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "4.4.*",
         "symfony/framework-bundle": "4.4.*",
