--- a/.docker/node/Dockerfile
+++ b/.docker/node/Dockerfile
@@ -2,7 +2,7 @@ FROM node:14
 
 USER node
 
-RUN mkdir /home/node/.npm-global
+RUN mkdir -p /home/node/.npm-global
 ENV PATH=/home/node/.npm-global/bin:$PATH
 ENV NPM_CONFIG_PREFIX=/home/node/.npm-global
 
